--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "serve -s dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -27,6 +28,7 @@
     "three-stdlib": "^2.32.2"
   },
   "devDependencies": {
+    "serve": "^14.1.2",
     "@eslint/js": "^9.9.0",
     "@react-three/eslint-plugin": "^0.1.1",
     "@types/react": "^18.3.3",
